# ChangeLog for x11-misc/magneto-gtk
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/magneto-gtk/ChangeLog,v 1.18 2012/03/23 14:25:39 lxnay Exp $

*magneto-gtk-1.0_rc90 (23 Mar 2012)

  23 Mar 2012; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc90.ebuild:
  version bump

*magneto-gtk-1.0_rc87 (12 Feb 2012)

  12 Feb 2012; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc87.ebuild:
  version bump

*magneto-gtk-1.0_rc80 (22 Dec 2011)

  22 Dec 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc80.ebuild:
  version bump

*magneto-gtk-1.0_rc77 (23 Nov 2011)

  23 Nov 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc77.ebuild:
  version bump

*magneto-gtk-1.0_rc76 (13 Nov 2011)

  13 Nov 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc76.ebuild:
  version bump

*magneto-gtk-1.0_rc59 (09 Oct 2011)

  09 Oct 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc59.ebuild:
  version bump

*magneto-gtk-1.0_rc53 (18 Sep 2011)

  18 Sep 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc53.ebuild:
  version bump

*magneto-gtk-1.0_rc43 (23 Aug 2011)

  23 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc43.ebuild:
  version bump

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -magneto-gtk-1.0_rc37.ebuild:
  drop older version 1.0_rc37

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -magneto-gtk-1.0_rc34.ebuild:
  drop older version 1.0_rc34

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -magneto-gtk-1.0_rc29.ebuild:
  drop older version 1.0_rc29

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -magneto-gtk-1.0_rc27.ebuild:
  drop older version 1.0_rc27

*magneto-gtk-1.0_rc38 (12 Aug 2011)

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +magneto-gtk-1.0_rc38.ebuild:
  version bump

*magneto-gtk-1.0_rc37 (11 Aug 2011)
