@@ -1,3 +1,4 @@
+DIST entropy-1.0_rc124.tar.bz2 1518029 SHA256 f81ca4f09de21e77064a3d382cb55bc3e78dc5b5991a16657e276b0e52f641bf SHA512 f61e3582aaa8e7c9e1efabeb4cf17a673cbdb72a8035bd12225e37e85c586ea6de8adf83a4ef8d727147a435e5c93f527b9b43d64b10ab95fdceb7cb07ec3cd6 WHIRLPOOL b8358a5b3e70778a190d0890b7c17f17052cf3e197401afee60214b8b7e458389dc6ba03ddae5db92f2513f66c047519d3cf4d27e230904f72d4890cc3a6421f
 DIST entropy-1.0_rc38.tar.bz2 18397706 RMD160 9b99eab9f28b2f47135aa474c8b2e856f10614d4 SHA1 dfc159ff37c2d3619d68a1fbc2d91934cc2aab35 SHA256 08a7c841d70cad9c31fb8ee97f7daea4542c1b9e6a1aa1d1e6a5c82eb8bf8d7c
 DIST entropy-1.0_rc43.tar.bz2 18410748 RMD160 8ba2eca99ef2509dd6fc6acb40f5cc3b91cfc366 SHA1 2449a874a091a3549eb1a1ab22357c1e601b6b1d SHA256 e922aa8c21d0a9338f7c1d498d42690c6418ece72e1bde68f98a5bce1d6c1cde
 DIST entropy-1.0_rc53.tar.bz2 1675138 RMD160 b4ee06b5a9545e9aebb189f984335dd3213878be SHA1 fdd0dc011569f8c2346f7f16173cc05bbeb4b8af SHA256 a7201af69ba2ada4f438869dbbe77a181576d445e88aaef07f318d842d144de0
@@ -7,14 +8,15 @@ DIST entropy-1.0_rc77.tar.bz2 1718649 RMD160 88a5ec354dfe6f4d00caa89e6f486ec6b44
 DIST entropy-1.0_rc80.tar.bz2 1721422 RMD160 4dd440f0f9194316ed7d2e114ae7beada242def6 SHA1 2ff10e4980be0cf70e5378165d3d1a7ca3f2d6ac SHA256 26594aa001d129e6d705fc01dd3076283ce071c094da3a14eed7881daeff436e
 DIST entropy-1.0_rc87.tar.bz2 1728487 RMD160 d6a76cee5cedad69b3317f1386109f51aea1bd44 SHA1 148818c4c81d640894a172ccd8b7e5c080586113 SHA256 677ab4fcfb46f1cf5f552c8e5da97ad75dbbb86f51ac92718bea2d63fe20f084
 DIST entropy-1.0_rc90.tar.bz2 1800246 RMD160 48361a0583aaa4f75fdca5f4bfc3a0be9ea1186a SHA1 35da86a04f9366db8aec5e93db09768afb02473d SHA256 52b06080ebf821a29f19b2ffa0c2a68cfc5cc58630a099c9d717b096817fb48c
-EBUILD magneto-gtk-1.0_rc38.ebuild 949 RMD160 28009fc2ba48a01537982780076bb2945aa8752a SHA1 e7365faa4672ddc86edd77159f2d07c33a39c5e9 SHA256 4d73347c03afcc0ab3453bae4952673e0a83ed523cec3722116d30a477df6a52
-EBUILD magneto-gtk-1.0_rc43.ebuild 949 RMD160 da2442e68efdddb204acd9491a7045f5b212a792 SHA1 b86576c9a9b733f2cdc59370b5c5d9d3b2f02a36 SHA256 4ddb476d7c313dfc83ae95f686a3d3e3fc3bde8fb9488ea713cdacbb13304aad
-EBUILD magneto-gtk-1.0_rc53.ebuild 949 RMD160 bedc66200bc33c22728f9782e60204c856e26c8e SHA1 966f112bba3bdc886efbbb891be9f72385edc608 SHA256 c9abdb4fcb38dd65ff24d8747d9c3f6bedf7a453caf574068df93df6af30a12b
-EBUILD magneto-gtk-1.0_rc59.ebuild 949 RMD160 b25b9e5be7fc028350465f8f986ca090f02fc0c3 SHA1 839409600bcfb6c30b8b33e860d5ea10c77e65db SHA256 33d1de437b1ae03048fcc986d8d1fdd7de4a290e52fe41bc0e9a93d669d4acf5
-EBUILD magneto-gtk-1.0_rc76.ebuild 949 RMD160 786ed7fb34971214962260c6c9a5a88908ab72fd SHA1 1c368d9485766cf644cd1fe36b05e33fce70b486 SHA256 fa7e8a31854081732e32cadeb4212d9b81c8e4f8c1a359f442c66d638d66003b
-EBUILD magneto-gtk-1.0_rc77.ebuild 949 RMD160 9480da043bc63c94046979ef86262ad152ea964e SHA1 9a87c2635b3879791785388da4d02ebedf0795d4 SHA256 6a310833f608d9a5545d5c1ee0c8c16f801670fa2c41fe825d88a47e07482689
-EBUILD magneto-gtk-1.0_rc80.ebuild 954 RMD160 83e70ed335fdd6009a4cd22b176e1a00e3f01b03 SHA1 f349b3e35bc5692020d1f82297495bef1e20ca97 SHA256 5a0a048f2bef05caa683f72cb44576df409e0d6d806c4134a7ae93d46f7354cb
-EBUILD magneto-gtk-1.0_rc87.ebuild 954 RMD160 16918a59fd738a32ae4d35bf151fe28c40828fc1 SHA1 5d583aec2f4e2bede61657e29e18c19b73f3942b SHA256 ca6a269232fea30f254e011948d02ac609a8b17574ea62ad100215773adfe603
-EBUILD magneto-gtk-1.0_rc90.ebuild 954 RMD160 6008c1c9f2fb4142ff097d0d2a992293cc272c0d SHA1 7779f49f1c1f80710040974f7ce8f8c0da91c3b8 SHA256 cc96d2b4f9e89c19937d907dfdee6baeda716fcea77e183a9eca82f648d0fc5b
-MISC ChangeLog 2502 RMD160 68984fa51e7c3dc3359d61c5fd81617a1c975ace SHA1 e00d5895efad5196d7d47e47792e2255e55730dc SHA256 045ef69332d879c0881ececa12ba33e133fe2c04aa653f16b31a3d0fe65359e7
-MISC metadata.xml 249 RMD160 43baee8c3c297b4d5dead04f6700a3f41e53c279 SHA1 b01bfe0c779a108491091ec7c3449865324a54b2 SHA256 c8f6c77ed785305b3c81640d0f8aefd1e0979c446458117922d2ba8979e2f53f
+EBUILD magneto-gtk-1.0_rc124.ebuild 955 SHA256 aea0544a0f6087dd8703ad4376db9350274fa97b3c20ae0dc48675711c7cc025 SHA512 229597e7f140e9213b18fff52e2fe9f1a4a8754653866e92e54ce886c44c58bcdce7eab56c233dc1adbd8458654185ca7e60165b2a887ab3213e32eb95badd17 WHIRLPOOL bd3edee0bbd4d0759b6c78393ac981bf9e6ec0479ec94855fcbde24465369c4ee65a7d7471e9989da47054b074c1ec422a27eda8975ff906d68e5a02d6aacdfc
+EBUILD magneto-gtk-1.0_rc38.ebuild 949 SHA256 4d73347c03afcc0ab3453bae4952673e0a83ed523cec3722116d30a477df6a52 SHA512 627f573250e5bb63113af0a040a622cf68131fe2ee6d0543179ae963ea9f02769a704630a3a52f3f29e21ab8d80cc08f0236f14e38cb0cc6c9f087c2a1c025b5 WHIRLPOOL 84cd4d4bc1f5362d56d00a33ffb5aa0f8a263bcff2627b0c94c8b586b1d0abb3afc4ac22edc33301d6557190f8d42c6b8dd43f77cac2e151e452fcdd30d430e8
+EBUILD magneto-gtk-1.0_rc43.ebuild 949 SHA256 4ddb476d7c313dfc83ae95f686a3d3e3fc3bde8fb9488ea713cdacbb13304aad SHA512 073428edc78b65c38967d4c820f3029de0cffab4c84529151b663218a6d124a90e89ac841fc57888a2f01e582dd4d29928831583e482f132d4b8b2bba6af8476 WHIRLPOOL 2c02fdbc9fd157d2f5f57c7b25f10649076855d5dbb8fb9178c9677923599591b87ded892ecbe1f4e1cb4e44ade285575b523d4840ab62c4a4636e44411227df
+EBUILD magneto-gtk-1.0_rc53.ebuild 949 SHA256 c9abdb4fcb38dd65ff24d8747d9c3f6bedf7a453caf574068df93df6af30a12b SHA512 1d6da5bd77883191ce18a503f4dc26720703c0467ab2bfe6de421e36f7521adf9041d0623fac0356029a4054541a5850512cf8f8609306f6eaeff93a3c969165 WHIRLPOOL 0923ca21d5c2e23fe96a5c763ffa5668f978442dafce25998bbdd8ab7d2ea0ca0ecb99f331908f2bb91d3fdbcf8b7ae614cbf3b8a236f36c1edefaa044d448e5
+EBUILD magneto-gtk-1.0_rc59.ebuild 949 SHA256 33d1de437b1ae03048fcc986d8d1fdd7de4a290e52fe41bc0e9a93d669d4acf5 SHA512 d3c24f4f5a476a948e010f15cfc683576db8585b0c201815e8c88125c604aa24809e5c3e6995fc4aaafe0cd5f67c94690556541498a2c70f3d2a15d1fbdaeae8 WHIRLPOOL 06d2316b85f6f2b9319b5298c76530134c05de32302ed5d7190d69eac22299b2bb51d2bfc3a1639305caacc2c867360b9a96e3ce38b27c6d0d59ff499111a75e
+EBUILD magneto-gtk-1.0_rc76.ebuild 949 SHA256 fa7e8a31854081732e32cadeb4212d9b81c8e4f8c1a359f442c66d638d66003b SHA512 2ca1ed9c56f198fe8cb69cfdd0f86fb2d716698e393319e3453aa4552cec45e6c0431c1d45f66146ae5aac2e5f407d9f5735cf614ab0cff5e527f52c7c298fa2 WHIRLPOOL 6dd561361bfa870214bbad3eb6fd91c36eb22e6176044e87113bb7e5ad7e04ce856ab90e0a8408db0ec3e23c2e58ced217d792c2897a78a24bfc3b28bce133f8
+EBUILD magneto-gtk-1.0_rc77.ebuild 949 SHA256 6a310833f608d9a5545d5c1ee0c8c16f801670fa2c41fe825d88a47e07482689 SHA512 30ae19f8d2d32a66db50b36b44e6510073c331bc84eb99e93a4937b77ae6f414b34083dac7e0755d29fd528587e659bc88f06cef697a49ee38a1534170153997 WHIRLPOOL 3f5e29de7388aab245a9252248381b685f826ce271fd60e9c7a74f0e3ba614bef564ede69690614dc5d536c52c84d34151bce108b10cbcebe2072751e6945335
+EBUILD magneto-gtk-1.0_rc80.ebuild 954 SHA256 5a0a048f2bef05caa683f72cb44576df409e0d6d806c4134a7ae93d46f7354cb SHA512 63e9af75bc9cf4714a14c7efb3d56d1c401517990b10c42a46150bb39634892524b950d54bb249cdc59fa814fee9389644931e818ea5767e46c1951efebf8b7f WHIRLPOOL 7d71995227dce3c5a50285a4bc204149f995ec4fcd08a898a62c02ef951fca616f3f98839b52f0af49bb5f59b4b684fd85ba52fedad9f1bacc5eeeab46f6df8b
+EBUILD magneto-gtk-1.0_rc87.ebuild 954 SHA256 ca6a269232fea30f254e011948d02ac609a8b17574ea62ad100215773adfe603 SHA512 3fe687f62218aefa4f7d5d2d64c5ebb5843e66be06aeefada366fbbdc1bc0769c128509dfeb8075106a67276c856339618acbc0c286765d8901b1e45afe6831a WHIRLPOOL 89cdd583eb32dd6f723e5eeb0d93e57eac335ae826f1330d5df9dc0d0fa16a8aff1f3c36c49314d1d62fe95566ac997cd9db7990bf889283b29f998131701357
+EBUILD magneto-gtk-1.0_rc90.ebuild 954 SHA256 cc96d2b4f9e89c19937d907dfdee6baeda716fcea77e183a9eca82f648d0fc5b SHA512 199b971dbd89b116709697abd950ba3f276d9dc688de19e84db4fddceb3326e0b12b71571b15ee16c7b8381c20045070f383c3aa106acc1b5c67ba042a301b46 WHIRLPOOL d065d0b045f2aed489a383c7e1305da2d9c97384499980db8c3e51096a09617a684fbbd9d91d00701196ab26bb1f219864f852f4e863b5c25018a5e40f829914
+MISC ChangeLog 2639 SHA256 02ac8a5a2c23bebdc4cfe5a203eeb203d65fada37c375048651012771328f654 SHA512 da7f42ae6eac0548a04ccd2852954b9c4e768b9aa359e6dc19eb0460026fc9c65b1e34c750b700292f9d399613a08093fe5bae360ba95d2d8a717e4e386812a4 WHIRLPOOL 88c435dc9fa10932a883f8ec7f082c426f67c07164fafc5e9823253de85a6a7f101ea835754951e15e4e722a61ead1fcf458ffb993c7621dd559305c6f70c1d4
+MISC metadata.xml 249 SHA256 c8f6c77ed785305b3c81640d0f8aefd1e0979c446458117922d2ba8979e2f53f SHA512 e90f800cf4b5909428161ee7577c8599e094765bcf366b151fe21c23c78b84df015e5ea766967e6d7f02d87e2fe1293d508a28b682bc7fcb395a47acbd741b16 WHIRLPOOL a34e9bb9649faaed8ccc588236a567453f3ef4990771cd27e9ebe3dfa37ecd7876f248c3ffa9a3f10ed1664f1be12c7d56d89375e41e2ceaa19b1439b32a833d
