@@ -1,0 +1,40 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/magneto-gtk/Attic/magneto-gtk-1.0_rc124.ebuild,v 1.1 2012/07/11 18:45:57 lxnay Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
+inherit eutils python
+
+DESCRIPTION="Entropy Package Manager notification applet GTK2 frontend"
+HOMEPAGE="http://www.sabayon.org"
+LICENSE="GPL-2"
+
+SLOT="0"
+KEYWORDS="~amd64 ~arm ~x86"
+IUSE=""
+
+SRC_URI="mirror://sabayon/sys-apps/entropy-${PV}.tar.bz2"
+S="${WORKDIR}/entropy-${PV}/magneto"
+
+RDEPEND="~app-misc/magneto-loader-${PV}
+	dev-python/notify-python
+	dev-python/pygtk:2
+"
+DEPEND=""
+
+src_compile() {
+	einfo "nothing to compile"
+}
+
+src_install() {
+	emake DESTDIR="${D}" LIBDIR="usr/lib" magneto-gtk-install || die "make install failed"
+}
+
+pkg_postinst() {
+	python_mod_optimize "/usr/lib/entropy/magneto/magneto/gtk"
+}
+
+pkg_postrm() {
+	python_mod_cleanup "/usr/lib/entropy/magneto/magneto/gtk"
+}
