@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/magneto-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/magneto-gtk/ChangeLog,v 1.18 2012/03/23 14:25:39 lxnay Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/magneto-gtk/ChangeLog,v 1.19 2012/07/11 18:45:57 lxnay Exp $
+
+*magneto-gtk-1.0_rc124 (11 Jul 2012)
+
+  11 Jul 2012; Fabio Erculiani <lxnay@gentoo.org>
+  +magneto-gtk-1.0_rc124.ebuild:
+  version bump
 
 *magneto-gtk-1.0_rc90 (23 Mar 2012)
 
